LWCLearnwithFLOWOrg/force-app/main/default/objects/Key_Field_Update__c/Key_Field_Update__c.object-meta.xml
<CustomObject>
    <description>2020-02-17 - N. Ehrmann - When a Key Field (specially designated fields on Contact and Account; located in Custom Metadata Types) is updated, these records will be created via Apex Trigger and then processed via asynchronous Apex.</description>
    <label>Key Field Update</label>
    <nameField>
        <label>Key Field Update Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Field Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>