LWCLearnwithFLOWOrg/force-app/main/default/objects/Key_Field_Update__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>2020-02-17 - N. Ehrmann - The Account for this Key Field Update.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Key Field Updates</relationshipLabel>
    <relationshipName>Key_Field_Updates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>