LWCLearnwithFLOWOrg/force-app/main/default/objects/Key_Field_Update__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>2020-02-17 - N. Ehrmann - AUTO - Assigned by Apex. If an error occurs during future Apex execution, the message is stamped here.</description>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>