LWCLearnwithFLOWOrg/force-app/main/default/objects/Key_Field_Update__c/fields/Field_API_Name_Contact__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name_Contact__c</fullName>
    <description>2020-02-17 - N. Ehrmann - AUTO - Assigned by Apex. The API Name of the key field on the Contact.</description>
    <label>Field API Name - Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>