LWCLearnwithFLOWOrg/force-app/main/default/objects/Key_Field_Update__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>2020-02-17 - N. Ehrmann - AUTO - Assigned by Apex. The Label of the field being updated.</description>
    <label>Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>