LWCLearnwithFLOWOrg/force-app/main/default/objects/Key_Field_Update__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>2020-02-18 - N. Ehrmann - AUTO - Set by Apex. The new value of the key field.</description>
    <label>New Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>