LWCLearnwithFLOWOrg/force-app/main/default/objects/Key_Field_Update__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <description>2020-02-18 - N. Ehrmann - AUTO - Set by Apex. The old value of the key field.</description>
    <label>Old Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>