LWCLearnwithFLOWOrg/force-app/main/default/objects/Key_Field_Update__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <description>2020-02-17 - N. Ehrmann - AUTO - This defaults to &quot;New&quot; and is later changed to &quot;Processed&quot; or &quot;Error&quot; based on execution of future apex.</description>
    <label>Processing Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>