LWCLearnwithFLOWOrg/force-app/main/default/objects/Key_Field_Update__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>2020-02-17 - N. Ehrmann - AUTO - Set by Apex. The Source of the KFU can be either &quot;Account Update&quot;, &quot;Contact Update&quot;, or &quot;Contact Insert&quot;.</description>
    <label>Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>