LWCLearnwithFLOWOrg/force-app/main/default/objects/Key_Field_Update__c/fields/Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Source_Detail__c</fullName>
    <description>2020-02-17 - N. Ehrmann - AUTO - Filled by Apex. If initiated by Contact Insert / Update (see Source), then the Contact name. If initiated by Account Update, then the name of the Account.</description>
    <label>Source Detail</label>
    <length>200</length>
    <type>Text</type>
</CustomField>